Add zgc uncommit delay option.